# automower2mqtt

./: Cargo.toml  README.mkd  flake.nix
src/: main.rs  schemas.rs
