[package]
name = "automower2mqtt"
version = "0.1.0"
edition = "2024"
license = "ISC"

[dependencies]
boot-time = "0.1.2"
clap = { version = "4.5.36", features = ["derive", "env"] }
futures = "0.3.31"
homie5 = { git = "https://github.com/schaze/homie5", version = "0.7.0", rev = "6e407a30092905e4f1856cf32fa110bd62b5b7bd" }
jiff = { version = "0.2.9", default-features = false, features = ["std"] }
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "rustls-tls", "stream", "charset", "json"] }
reqwest-retry = "0.7.0"
rumqttc = { version = "0.24.0", features = ["url"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.2"
tokio-tungstenite = { version = "0.26.2", features = ["__rustls-tls", "rustls", "rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
